# hw12_13_14_15_calendar/internal/server/http/api/api.yaml
@@ -60,13 +60,13 @@ paths:
                 $ref: '#/components/schemas/Error'
   /events/{id}:
     get:
-      summary: Get event by id
-      operationId: findEventById
+      summary: Get event by ID
+      operationId: findEventByID
       parameters:
         - name: id
           in: path
           required: true
-          description: event id
+          description: event ID
           schema:
             type: string
       responses:
@@ -83,8 +83,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'    
     delete:
-      summary: Delete event by id
-      operationId: deleteEventById
+      summary: Delete event by ID
+      operationId: deleteEventByID
       parameters:
         - name: id        
           in: path
@@ -102,8 +102,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
     put:
-      summary: Update event by id
-      operationId: updateEventById
+      summary: Update event by ID
+      operationId: updateEventByID
       parameters:
         - name: id
           in: path
